07-test-ingress-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ingress-app
  namespace: test-ingress-app
spec:
  selector:
    app: test-ingress-app
  ports:
    - name: http
      port: 80
      targetPort: 5678
