07-test-ingress-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-app
  namespace: test-ingress-app
spec:
  ingressClassName: nginx
  rules:
    - host: tikejhya.intra.nixbin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-ingress-app
                port:
                  number: 80
